# zero2prod

./: .dockerignore  .env  Cargo.toml  Dockerfile  README.md
.github/workflows/: audit.yml  general.yml
db/migrations/: 1_create_subscriptions_table.sql
migrations/: 2_create_newsletters_table.sql  3_create_deliveries_table.sql
scripts/: init_db.sh  seed.sh  seed_1_import.sh  seed_2_set-values.sh  seed_3_generate.sh  subscribe.sh
src/: configuration.rs  db.rs  lib.rs  main.rs  startup.rs  subscriber.rs  telemetry.rs
src/db/: mod.rs  subscriptions.rs
src/routes/: subscriptions.rs
synth/: deliveries.json  newsletters.json  subscriptions.json
tests/: health_check.rs  subscribe.rs
tests/init/: mod.rs
tests/integration/: globals.rs  health_check.rs  init.rs  main.rs  subscribe.rs
